--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldPassword.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldPassword.razor
@@ -1,5 +1,5 @@
-<CustomRowWithLabelsAndInput FirstText="@FirstText" Typo="@Typo">
-    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
+<CustomRowWithLabelAndInput Md="@FirstMd" Lg="@FirstLg" FirstText="@FirstText" Typo="@Typo">
+    <MudItem Md="@SecondMd" Lg="@SecondLg" Class="align-self-center">
         <MudTextField T="string" @bind-Value="@BindValue" Required="@Required" Immediate="true"
                       FullWidth="true" InputType="@KeyboardInputType"
                       Margin="Margin.Dense" Variant="Variant.Outlined"
@@ -7,11 +7,18 @@
                       OnAdornmentClick="@OnAdornmentClick" AdornmentAriaLabel="Show Password">
         </MudTextField>
     </MudItem>
-</CustomRowWithLabelsAndInput>
+</CustomRowWithLabelAndInput>
 
 
 @code {
+    [Parameter] public int FirstMd { get; set; } = 5;
 
+    [Parameter] public int FirstLg { get; set; } = 5;
+
+    [Parameter] public int SecondMd { get; set; } = 7;
+
+    [Parameter] public int SecondLg { get; set; } = 7;
+    
     [Parameter] public string? FirstText { get; set; }
 
     [Parameter] public Typo Typo { get; set; } = Typo.body1;
@@ -34,10 +41,10 @@
 
     [Parameter] public EventCallback<string> BindValueChanged { get; set; }
 
-    [Parameter] public string? AdornmentIcon  { get; set; }
-    
-    [Parameter] public EventCallback<MouseEventArgs>  OnAdornmentClick  { get; set; }
-    
+    [Parameter] public string? AdornmentIcon { get; set; }
+
+    [Parameter] public EventCallback<MouseEventArgs> OnAdornmentClick { get; set; }
+
     private string? _bindValue;
 
 }
