--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
@@ -1,82 +1,33 @@
 ﻿@using Friday.ERP.Client.Data
 @using Friday.ERP.Shared.DataTransferObjects
+
 @inject IHttpRepository HttpRepo
+@inject ISnackbar Snackbar
 
 <MudDialog>
     <DialogContent>
         <MudForm @ref="_form" @bind-IsValid="@_success" @bind-Errors="@_errors">
             <MudGrid Spacing="2">
-                <CustomRowWithLabelsAndInput FirstText="Name">
-                    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                        <MudTextField T="string" @bind-Value="@Name" Required="true"
-                                      FullWidth="true" InputType="InputType.Text"
-                                      Margin="Margin.Dense" Variant="Variant.Outlined">
-                        </MudTextField>
-                    </MudItem>
-                </CustomRowWithLabelsAndInput>
-                <CustomRowWithLabelsAndInput FirstText="Phone">
-                    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                        <MudTextField T="string" @bind-Value="@Phone"
-                                      FullWidth="true" InputType="InputType.Text"
-                                      Margin="Margin.Dense" Variant="Variant.Outlined">
-                        </MudTextField>
-                    </MudItem>
-                </CustomRowWithLabelsAndInput>
-                <CustomRowWithLabelsAndInput FirstText="Email">
-                    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                        <MudTextField T="string" @bind-Value="@Email"
-                                      FullWidth="true" InputType="InputType.Text"
-                                      Margin="Margin.Dense" Variant="Variant.Outlined">
-                        </MudTextField>
-                    </MudItem>
-                </CustomRowWithLabelsAndInput>
+                <CustomRowWithLabelAndFieldString FirstText="Name" @bind-BindValue="@Name" Required="true"/>
+                <CustomRowWithLabelAndFieldString FirstText="Phone" @bind-BindValue="@Phone" KeyboardInputType="InputType.Telephone"/>
+                <CustomRowWithLabelAndFieldString FirstText="Email" @bind-BindValue="@Email" KeyboardInputType="InputType.Email"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
             <MudGrid Spacing="2">
-                <CustomRowWithLabelsAndInput FirstText="Address">
-                    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                        <MudTextField T="string" @bind-Value="@Address"
-                                      FullWidth="true" InputType="InputType.Text"
-                                      Margin="Margin.Dense" Variant="Variant.Outlined">
-                        </MudTextField>
-                    </MudItem>
-                </CustomRowWithLabelsAndInput>
+                <CustomRowWithLabelAndFieldString FirstText="Address" @bind-BindValue="@Address"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
             <MudGrid Spacing="2">
-                <CustomRowWithLabelsAndInput FirstText="Total Credit / Debit">
-                    <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                        <MudTextField T="int" @bind-Value="@TotalCreditDebit" Required="true"
-                                      FullWidth="true" InputType="InputType.Number"
-                                      Margin="Margin.Dense" Variant="Variant.Outlined">
-                        </MudTextField>
-                    </MudItem>
-                </CustomRowWithLabelsAndInput>
+                <CustomRowWithLabelAndFieldLong FirstText="Total Credit / Debit" @bind-BindValue="@TotalCreditDebit"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <CustomButton Color="Color.Default" Disabled="_isLoading" OnClick="@DialogCancel" Variant="Variant.Text" FullWidth="false">
-            @if (_isLoading)
-            {
-                <MudProgressCircular Color="Color.Default" Style="height:27px;width:27px;" Indeterminate="true"/>
-            }
-            else
-            {
-                @("Cancel")
-            }
-        </CustomButton>
-        <CustomButton Color="Color.Primary" Disabled="_isLoading" OnClick="@DialogSubmit" Variant="Variant.Text" FullWidth="false">
-            @if (_isLoading)
-            {
-                <MudProgressCircular Color="Color.Default" Style="height:27px;width:27px;" Indeterminate="true"/>
-            }
-            else
-            {
-                @("Create")
-            }
-        </CustomButton>
+        <CustomButton
+            Label="Cancel" IsLoading="_isLoading" OnClick="@DialogCancel" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
+        <CustomButton
+            Label="Create" IsLoading="_isLoading" OnClick="@DialogSubmit" Variant="Variant.Text" FullWidth="false"/>
     </DialogActions>
 </MudDialog>
 
@@ -96,7 +47,7 @@
     string? Phone { get; set; }
     string? Email { get; set; }
     string? Address { get; set; }
-    int TotalCreditDebit { get; set; }
+    long TotalCreditDebit { get; set; }
 
     void DialogCancel()
     {
@@ -119,14 +70,14 @@
                 TotalCreditDebit
             );
 
-            var result = IsCustomer ? await HttpRepo.CreateCustomer(dataToCreate) : await HttpRepo.CreateVendor(dataToCreate);
+            var httpResult = IsCustomer ? await HttpRepo.CreateCustomer(dataToCreate) : await HttpRepo.CreateVendor(dataToCreate);
 
-            if (result.isSuccess)
+            if (httpResult.isSuccess)
             {
-                MudDialog!.Close(DialogResult.Ok(true));
+                Snackbar.Add(IsCustomer ? "Customer Created!" : "Vendor Created!", Severity.Success);
             }
+            MudDialog!.Close(DialogResult.Ok(httpResult.isSuccess));
         }
-
         _isLoading = false;
         StateHasChanged();
     }
