--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldLong.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldLong.razor
@@ -1,6 +1,6 @@
 <CustomRowWithLabelAndInput Md="@FirstMd" Lg="@FirstLg" FirstText="@FirstText" Typo="@Typo">
     <MudItem md="@SecondMd" lg="@SecondLg" Class="align-self-center">
-        <MudTextField T="string" @bind-Value="@BindValue" Required="@Required" Immediate="true"
+        <MudTextField T="long" @bind-Value="@BindValue" Required="@Required" Immediate="true"
                       FullWidth="true" InputType="@KeyboardInputType"
                       Margin="Margin.Dense" Variant="Variant.Outlined">
         </MudTextField>
@@ -23,7 +23,7 @@
     [Parameter] public Typo Typo { get; set; } = Typo.body1;
 
     [Parameter]
-    public string? BindValue
+    public long BindValue
     {
         get => _bindValue;
         set
@@ -36,10 +36,10 @@
 
     [Parameter] public bool Required { get; set; }
 
-    [Parameter] public InputType KeyboardInputType { get; set; } = InputType.Text;
+    [Parameter] public InputType KeyboardInputType { get; set; } = InputType.Number;
 
-    [Parameter] public EventCallback<string> BindValueChanged { get; set; }
+    [Parameter] public EventCallback<long> BindValueChanged { get; set; }
 
-    private string? _bindValue;
+    private long _bindValue;
 
 }
